# prob

./: CHANGELOG.md  LICENSE  README.md  dice-simulator.cabal  prob.cabal
app/: Main.hs
src/: Dice.hs  Dist.hs
src/Probability/: Distribution.hs
test/: Main.hs
