cabal-version:      2.4
name:               dice-simulator
version:            0.1.0.0

author:             Chris Smith and Shae Erisson
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Dice,
                      Dist

    build-depends:    base ^>=4.15.0.0,
                      containers,
                      pqueue,
                      random
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base ^>=4.15.0.0,
                      hspec
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall

executable dice-simulator
    main-is:          Main.hs

    build-depends:    base ^>=4.15.0.0,
                      dice-simulator
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
